frontend/src/styles/card.css
.job-card {
    background-image: linear-gradient(to top, #111111, #242222);
    margin: 0 10px 10px;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 0 4px rgba(255, 255, 255, 0.2);
    min-width: 500px;
    min-height: 200px;
    width: calc(50% - 20px);
    display: inline-block;
}

.job-card h3 {
    margin: 0 0 5px;
}

.job-card .job-card-date {
    float: right;
    font-size: small;
    font-weight: 700;
    margin: 0 10px 0 0;
}

.job-card-layout {
    display: grid;
    grid-template-columns: 60px 1fr;
    gap: 10px;
}

.job-card-company {
    margin: 0 10px 0 0;
    font-weight: 700;
}

.job-card .icon {
    width: 60px;
    height: 60px;
}

.job-card p {
    display: -webkit-box;
    line-clamp: 3; /* Limit the number of lines to display */
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis; /* Show an ellipsis (...) when content overflows */
    margin: 5px 0 0;
    
}

.job-card p.job-card-summary-all {
    -webkit-line-clamp: unset;
}

.job-card-summary-more {
    text-align: right;
    color: #fff;
}

.job-card-summary-more span {
    cursor: pointer;
    padding: 5px 10px;
}

.pagination {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 20px 0;
}

.pag {
    border: 1px solid;
    width: 30px;
    height: 30px;
    line-height: 30px;
    display: inline-block;
    text-align: center;
    margin: 0 5px 0 0;
    cursor: pointer;
}

.pag-active,
.pag:hover {
    background: rgba(255, 255, 255, 0.1);
    color: #fff;
}

